// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimeEntry renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width: 7396px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 22 * 16px - 2 *
                72px
            ) / 23
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 7080px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 21 * 16px - 2 *
                72px
            ) / 22
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6764px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 20 * 16px - 2 *
                72px
            ) / 21
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6448px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 19 * 16px - 2 *
                72px
            ) / 20
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6132px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 18 * 16px - 2 *
                72px
            ) / 19
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5816px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 17 * 16px - 2 *
                72px
            ) / 18
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5500px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 16 * 16px - 2 *
                72px
            ) / 17
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5184px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 15 * 16px - 2 *
                72px
            ) / 16
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4868px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 14 * 16px - 2 *
                72px
            ) / 15
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4552px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 13 * 16px - 2 *
                72px
            ) / 14
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4236px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 12 * 16px - 2 *
                72px
            ) / 13
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3920px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 11 * 16px - 2 *
                72px
            ) / 12
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3604px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 10 * 16px - 2 *
                72px
            ) / 11
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3288px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 9 * 16px - 2 *
                72px
            ) / 10
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2972px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 8 * 16px - 2 *
                72px
            ) / 9
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2656px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 7 * 16px - 2 *
                72px
            ) / 8
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2340px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 6 * 16px - 2 *
                72px
            ) / 7
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2024px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 5 * 16px - 2 *
                72px
            ) / 6
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1708px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 4 * 16px - 2 *
                72px
            ) / 5
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1392px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 3 * 16px - 2 *
                72px
            ) / 4
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1076px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 2 * 16px - 2 *
                72px
            ) / 3
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 760px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 1 * 16px - 2 *
                72px
            ) / 2
        );
    --height: calc(var(--width) * 0.94);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width: 444px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 0 * 16px - 2 *
                72px
            ) / 1
        );
    --height: calc(var(--width) * 0.94);
  }
}

.emotion-0 .ManageButtons {
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.emotion-0:hover {
  z-index: 10;
}

.emotion-0:hover .ManageButtons {
  opacity: 1;
}

<div
    data-testid="anime-entry-wrapper"
    style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="emotion-0"
      data-testid="anime-entry-background"
    >
      <div
        data-testid="render-return"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnimeEntry renders when its a popover 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width: 7396px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 22 * 16px - 2 *
                72px
            ) / 23
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 7080px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 21 * 16px - 2 *
                72px
            ) / 22
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6764px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 20 * 16px - 2 *
                72px
            ) / 21
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6448px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 19 * 16px - 2 *
                72px
            ) / 20
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6132px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 18 * 16px - 2 *
                72px
            ) / 19
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5816px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 17 * 16px - 2 *
                72px
            ) / 18
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5500px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 16 * 16px - 2 *
                72px
            ) / 17
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5184px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 15 * 16px - 2 *
                72px
            ) / 16
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4868px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 14 * 16px - 2 *
                72px
            ) / 15
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4552px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 13 * 16px - 2 *
                72px
            ) / 14
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4236px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 12 * 16px - 2 *
                72px
            ) / 13
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3920px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 11 * 16px - 2 *
                72px
            ) / 12
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3604px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 10 * 16px - 2 *
                72px
            ) / 11
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3288px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 9 * 16px - 2 *
                72px
            ) / 10
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2972px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 8 * 16px - 2 *
                72px
            ) / 9
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2656px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 7 * 16px - 2 *
                72px
            ) / 8
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2340px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 6 * 16px - 2 *
                72px
            ) / 7
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2024px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 5 * 16px - 2 *
                72px
            ) / 6
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1708px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 4 * 16px - 2 *
                72px
            ) / 5
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1392px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 3 * 16px - 2 *
                72px
            ) / 4
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1076px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 2 * 16px - 2 *
                72px
            ) / 3
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 760px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 1 * 16px - 2 *
                72px
            ) / 2
        );
    --height: calc(var(--width) * 0.94);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width: 444px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 0 * 16px - 2 *
                72px
            ) / 1
        );
    --height: calc(var(--width) * 0.94);
  }
}

.emotion-0 .ManageButtons {
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.emotion-0:hover {
  z-index: 10;
}

.emotion-0:hover .ManageButtons {
  opacity: 1;
}

<div
    data-testid="anime-entry-wrapper"
    style="opacity: 1;"
  >
    <div
      class="emotion-0"
      data-testid="anime-entry-background"
    >
      <div
        data-testid="render-return"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnimeEntry should take longer to appear as long as index (1) increases 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width: 7396px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 22 * 16px - 2 *
                72px
            ) / 23
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 7080px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 21 * 16px - 2 *
                72px
            ) / 22
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6764px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 20 * 16px - 2 *
                72px
            ) / 21
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6448px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 19 * 16px - 2 *
                72px
            ) / 20
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6132px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 18 * 16px - 2 *
                72px
            ) / 19
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5816px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 17 * 16px - 2 *
                72px
            ) / 18
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5500px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 16 * 16px - 2 *
                72px
            ) / 17
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5184px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 15 * 16px - 2 *
                72px
            ) / 16
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4868px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 14 * 16px - 2 *
                72px
            ) / 15
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4552px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 13 * 16px - 2 *
                72px
            ) / 14
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4236px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 12 * 16px - 2 *
                72px
            ) / 13
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3920px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 11 * 16px - 2 *
                72px
            ) / 12
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3604px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 10 * 16px - 2 *
                72px
            ) / 11
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3288px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 9 * 16px - 2 *
                72px
            ) / 10
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2972px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 8 * 16px - 2 *
                72px
            ) / 9
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2656px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 7 * 16px - 2 *
                72px
            ) / 8
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2340px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 6 * 16px - 2 *
                72px
            ) / 7
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2024px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 5 * 16px - 2 *
                72px
            ) / 6
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1708px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 4 * 16px - 2 *
                72px
            ) / 5
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1392px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 3 * 16px - 2 *
                72px
            ) / 4
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1076px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 2 * 16px - 2 *
                72px
            ) / 3
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 760px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 1 * 16px - 2 *
                72px
            ) / 2
        );
    --height: calc(var(--width) * 0.94);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width: 444px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 0 * 16px - 2 *
                72px
            ) / 1
        );
    --height: calc(var(--width) * 0.94);
  }
}

.emotion-0 .ManageButtons {
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.emotion-0:hover {
  z-index: 10;
}

.emotion-0:hover .ManageButtons {
  opacity: 1;
}

<div
    data-testid="anime-entry-wrapper"
    style="opacity: 1; webkit-transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="emotion-0"
      data-testid="anime-entry-background"
    >
      <div
        data-testid="render-return"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnimeEntry should take longer to appear as long as index (2) increases 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width: 7396px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 22 * 16px - 2 *
                72px
            ) / 23
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 7080px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 21 * 16px - 2 *
                72px
            ) / 22
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6764px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 20 * 16px - 2 *
                72px
            ) / 21
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6448px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 19 * 16px - 2 *
                72px
            ) / 20
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6132px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 18 * 16px - 2 *
                72px
            ) / 19
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5816px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 17 * 16px - 2 *
                72px
            ) / 18
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5500px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 16 * 16px - 2 *
                72px
            ) / 17
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5184px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 15 * 16px - 2 *
                72px
            ) / 16
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4868px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 14 * 16px - 2 *
                72px
            ) / 15
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4552px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 13 * 16px - 2 *
                72px
            ) / 14
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4236px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 12 * 16px - 2 *
                72px
            ) / 13
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3920px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 11 * 16px - 2 *
                72px
            ) / 12
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3604px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 10 * 16px - 2 *
                72px
            ) / 11
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3288px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 9 * 16px - 2 *
                72px
            ) / 10
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2972px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 8 * 16px - 2 *
                72px
            ) / 9
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2656px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 7 * 16px - 2 *
                72px
            ) / 8
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2340px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 6 * 16px - 2 *
                72px
            ) / 7
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2024px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 5 * 16px - 2 *
                72px
            ) / 6
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1708px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 4 * 16px - 2 *
                72px
            ) / 5
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1392px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 3 * 16px - 2 *
                72px
            ) / 4
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1076px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 2 * 16px - 2 *
                72px
            ) / 3
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 760px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 1 * 16px - 2 *
                72px
            ) / 2
        );
    --height: calc(var(--width) * 0.94);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width: 444px) {
  .emotion-0 {
    --width: calc(
          (
              100vw - 0 * 16px - 2 *
                72px
            ) / 1
        );
    --height: calc(var(--width) * 0.94);
  }
}

.emotion-0 .ManageButtons {
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.emotion-0:hover {
  z-index: 10;
}

.emotion-0:hover .ManageButtons {
  opacity: 1;
}

<div
    data-testid="anime-entry-wrapper"
    style="opacity: 1; webkit-transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="emotion-0"
      data-testid="anime-entry-background"
    >
      <div
        data-testid="render-return"
      />
    </div>
  </div>
</DocumentFragment>
`;
